syntax= "proto3";

option go_package="github.com/Mensurui/golangCheckHealthTrial/protos";

service Service{
  rpc Check(HealthCheckRequest)
  returns (HealthCheckResponse);
  
  rpc Wait(HealthCheckRequest)
  returns (stream HealthCheckResponse);
}

message HealthCheckRequest{
  string service = 1;
}

message HealthCheckResponse{
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
